Feeds and upload support

--- a/src/ExtensionGallery/app/less/site.less
+++ b/src/ExtensionGallery/app/less/site.less
@@ -62,8 +62,12 @@ h3 {
 
 #upload {
 
-    input[type=url] {
+    input[type=file] {
         width: 500px;
+    }
+
+	input[type=submit] {
+        margin-top: 1em;
     }
 
     .has-error {
