--- a/src/ExtensionGallery/app/views/home.html
+++ b/src/ExtensionGallery/app/views/home.html
@@ -7,7 +7,7 @@
 			<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Download
 		</a>
 
-		<a href="/home/feed/{{package.ID}}" class="btn-sm btn-success">
+		<a ng-href="/home/feed/{{package.ID}}" class="btn-sm btn-success">
 			<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 		</a>
 		<time>{{package.DatePublished | date:'MMM d. yyyy'}}</time>
