--- a/src/ExtensionGallery/app/views/extension.html
+++ b/src/ExtensionGallery/app/views/extension.html
@@ -15,7 +15,7 @@
 			<a class="btn-sm btn-primary" ng-href="{{package.DownloadUrl}}">
 				<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Download
 			</a>
-			<a class="btn-sm btn-success" ng-href="/home/feed/{{package.ID}}">
+			<a class="btn-sm btn-success" ng-href="/feed/extension/{{package.ID}}">
 				<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 			</a>
 		</article>
