--- a/src/ExtensionGallery/app/views/home.html
+++ b/src/ExtensionGallery/app/views/home.html
@@ -1,15 +1,23 @@
-﻿<div id="extensions">
+﻿
+<h1 class="page-header">
+	{{headline}}
+	<a ng-href="{{feed}}" class="btn btn-success">
+		<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
+	</a>
+</h1>
+
+<div id="extensions">
 	<article ng-repeat="package in packages">
 		<img class="icon" ng-src="{{package.Icon}}" alt="{{package.Name}}" />
-		<h2><a ng-href="#/extension/{{package.ID}}">{{package.Name}} - {{package.Version}}</a></h2>
+		<h3><a ng-href="#/extension/{{package.ID}}">{{package.Name}} - {{package.Version}}</a></h3>
 		<p>{{package.Description}}</p>
 		<a class="btn-sm btn-primary" ng-href="{{package.DownloadUrl}}">
 			<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Download
 		</a>
 
-		<a ng-href="/home/feed/{{package.ID}}" class="btn-sm btn-success">
+		<a ng-href="/feed/extension/{{package.ID}}" class="btn-sm btn-success">
 			<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 		</a>
-		<time>{{package.DatePublished | date:'MMM d. yyyy'}}</time>
+		<time>{{package.DatePublished | date:'&nbsp;MMM d. yyyy'}}</time>
 	</article>
 </div>
