REmoved Views folder

--- a/src/ExtensionGallery/app/less/site.less
+++ b/src/ExtensionGallery/app/less/site.less
@@ -9,17 +9,8 @@ body {
 	font-family: arial;
 }
 
-header {
-	margin-bottom: 3em;
-
-	a {
-		color: black;
-		cursor: pointer !important;
-
-		&:hover {
-			text-decoration: none;
-		}
-	}
+a.btn:hover, a.btn-sm:hover {
+	text-decoration: none
 }
 
 .container:first-child {
