--- a/src/ExtensionGallery/app/views/extension.html
+++ b/src/ExtensionGallery/app/views/extension.html
@@ -13,10 +13,10 @@
 				<p><strong>Updated:</strong> <time>{{package.DatePublished | date:'MMM d. yyyy'}}</time></p>
 			</div>
 			<br />
-			<a class="btn-sm btn-primary" ng-href="{{package.DownloadUrl}}">
+			<a class="btn-sm btn-success" ng-href="{{package.DownloadUrl}}">
 				<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Download
 			</a>
-			<a class="btn-sm btn-success" ng-href="/feed/extension/{{package.ID}}">
+			<a class="btn-sm btn-default" ng-href="/feed/extension/{{package.ID}}">
 				<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 			</a>
 		</article>
