--- a/src/ExtensionGallery/app/views/home.html
+++ b/src/ExtensionGallery/app/views/home.html
@@ -1,7 +1,7 @@
 ﻿
 <h1 class="page-header">
 	{{headline}}
-	<a ng-href="{{feed}}" class="btn btn-success">
+	<a ng-href="{{feed}}" class="btn btn-default">
 		<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 	</a>
 </h1>
@@ -17,14 +17,19 @@
 
 	<article ng-repeat="package in packages | filter: packageSearch">
 		<img class="icon" ng-src="{{package.Icon}}" alt="{{package.Name}}" />
-		<h3><a ng-href="#/extension/{{package.ID}}">{{package.Name}}</a></h3>
+
+		<h3>
+			<a ng-href="#/extension/{{package.ID}}">{{package.Name}}</a>
+		</h3>
+
 		<a ng-href="#/author/{{package.Author | lowercase }}">{{package.Author}}</a>
 		<p>{{package.Description}}</p>
-		<a class="btn-sm btn-primary" ng-href="{{package.DownloadUrl}}">
+
+		<a class="btn-sm btn-success" ng-href="{{package.DownloadUrl}}">
 			<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Download
 		</a>
 
-		<a ng-href="/feed/extension/{{package.ID}}" class="btn-sm btn-success">
+		<a ng-href="/feed/extension/{{package.ID}}" class="btn-sm btn-default">
 			<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 		</a>
 		<time>{{package.DatePublished | date:'&nbsp;MMM d. yyyy'}}</time>
