--- a/src/ExtensionGallery/app/less/site.less
+++ b/src/ExtensionGallery/app/less/site.less
@@ -50,12 +50,15 @@ h3 {
 	article {
 		clear: both;
 		padding: 10px;
-			margin-top: 3em;
+		margin-top: 3em;
+
+		> div {
+			margin-left: 120px;
+		}
 
 		.icon {
 			float: left;
 			width: 90px;
-			margin-right: 2em;
 		}
 
 		.preview {
@@ -65,23 +68,39 @@ h3 {
 			margin-bottom: 2em;
 		}
 
-		.details {
-			line-height: 1;
-			margin: 10px 0 15px 0;
-			display: inline-block;
+		.properties {
+			margin-left: 200px !important;
 
-			& > p > strong {
+			.details {
+				line-height: 1;
+				margin: 10px 0 15px 0;
 				display: inline-block;
-				width: 90px;
+
+				& > p > strong {
+					display: inline-block;
+					width: 130px;
+				}
+
+				ul {
+					list-style: none;
+					padding: 0;
+					margin: 20px 0;
+
+					li {
+						display: inline-block;
+						margin-right: 1em;
+					}
+				}
 			}
 		}
 	}
 }
 
 #upload {
+	max-width: 450px;
 
 	input[type=file] {
-		width: 500px;
+		width: 100%;
 	}
 
 	a[ng-click] {
