--- a/src/ExtensionGallery/app/views/extension.html
+++ b/src/ExtensionGallery/app/views/extension.html
@@ -4,21 +4,43 @@
 
 		<article>
 			<img class="preview" ng-src="{{package.Preview}}" alt="{{package.Name}}" />
-			<p>{{package.Description}}</p>
-			<div class="details">
-				<p><strong>Author:</strong> <a ng-href="#/author/{{package.Author | lowercase }}">{{package.Author}}</a></p>
-				<p><strong>Supports:</strong> Visual Studio <span ng-repeat="version in package.SupportedVersions">{{version + '&nbsp;'}}</span></p>
-				<p><strong>Tags:</strong> {{package.Tags}}</p>
-				<p><strong>Version:</strong> {{package.Version}}</p>
-				<p><strong>Updated:</strong> <time>{{package.DatePublished | date:'MMM d. yyyy'}}</time></p>
+
+			<div class="properties">
+				<p>{{package.Description}}</p>
+				<div class="details">
+					<p><strong>Author:</strong> <a ng-href="#/author/{{package.Author | lowercase }}">{{package.Author}}</a></p>
+					<p><strong>Supports:</strong> Visual Studio <span ng-repeat="version in package.SupportedVersions">{{version + '&nbsp;'}}</span></p>
+					<p ng-show="package.Tags"><strong>Tags:</strong> {{package.Tags}}</p>
+					<p><strong>Version:</strong> {{package.Version}}</p>
+					<p><strong>Updated:</strong> <time>{{package.DatePublished | date:'MMM d. yyyy'}}</time></p>
+
+					<ul>
+						<li ng-show="package.MoreInfoUrl">
+							<a href="{{package.MoreInfoUrl}}">
+								<span class="glyphicon glyphicon-home" aria-hidden="true"></span> Website
+							</a>
+						</li>
+						<li ng-show="package.Repo">
+							<a href="{{package.Repo}}">
+								<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Source code
+							</a>
+						</li>
+						<li ng-show="package.IssueTracker">
+							<a href="{{package.IssueTracker}}">
+								<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Issue Tracker
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				<br />
+				<a class="btn-sm btn-success" ng-href="{{package.DownloadUrl}}">
+					<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Download
+				</a>
+				<a class="btn-sm btn-default" ng-href="/feed/extension/{{package.ID}}">
+					<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
+				</a>
 			</div>
-			<br />
-			<a class="btn-sm btn-success" ng-href="{{package.DownloadUrl}}">
-				<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Download
-			</a>
-			<a class="btn-sm btn-default" ng-href="/feed/extension/{{package.ID}}">
-				<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
-			</a>
 		</article>
 
 		<br />
