--- a/src/ExtensionGallery/app/views/extension.html
+++ b/src/ExtensionGallery/app/views/extension.html
@@ -1,31 +1,31 @@
 ﻿<div id="extensions">
-	<div ng-model="package" ng-show="package">
+	<div data-ng-model="package" data-ng-show="package">
 		<h1 class="page-header">{{package.Name}}</h1>
 
 		<article>
-			<img class="preview" ng-src="{{package.Preview}}" alt="{{package.Name}}" />
+			<img class="preview" data-ng-src="{{package.Preview}}" alt="{{package.Name}}" />
 
 			<div class="properties">
 				<p>{{package.Description}}</p>
 				<div class="details">
-					<p><strong>Author:</strong> <a ng-href="#/author/{{package.Author | lowercase }}">{{package.Author}}</a></p>
-					<p><strong>Supports:</strong> Visual Studio <span ng-repeat="version in package.SupportedVersions">{{version + '&nbsp;'}}</span></p>
-					<p ng-show="package.Tags"><strong>Tags:</strong> {{package.Tags}}</p>
+					<p><strong>Author:</strong> <a data-ng-href="#/author/{{package.Author | lowercase | escape }}">{{package.Author}}</a></p>
+					<p><strong>Supports:</strong> Visual Studio <span data-ng-repeat="version in package.SupportedVersions">{{version + '&nbsp;'}}</span></p>
+					<p data-ng-show="package.Tags"><strong>Tags:</strong> {{package.Tags}}</p>
 					<p><strong>Version:</strong> {{package.Version}}</p>
-					<p><strong>Updated:</strong> <time>{{package.DatePublished | date:'MMM d. yyyy'}}</time></p>
+					<p><strong>Updated:</strong> <time datetime="{{package.DatePublished | date:'yyyy-MM-dd'}}">{{package.DatePublished | date:'MMM d. yyyy'}}</time></p>
 
 					<ul>
-						<li ng-show="package.MoreInfoUrl">
+						<li data-ng-show="package.MoreInfoUrl">
 							<a href="{{package.MoreInfoUrl}}">
 								<span class="glyphicon glyphicon-home" aria-hidden="true"></span> Website
 							</a>
 						</li>
-						<li ng-show="package.Repo">
+						<li data-ng-show="package.Repo">
 							<a href="{{package.Repo}}">
 								<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Source code
 							</a>
 						</li>
-						<li ng-show="package.IssueTracker">
+						<li data-ng-show="package.IssueTracker">
 							<a href="{{package.IssueTracker}}">
 								<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Issue Tracker
 							</a>
@@ -34,17 +34,17 @@
 				</div>
 
 				<br />
-				<a class="btn-sm btn-success" ng-href="{{package.DownloadUrl}}">
+				<a class="btn-sm btn-success" data-ng-href="{{package.DownloadUrl}}">
 					<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Download
 				</a>
-				<a class="btn-sm btn-default" ng-href="/feed/extension/{{package.ID}}">
+				<a class="btn-sm btn-default" data-ng-href="/feed/extension/{{package.ID}}">
 					<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 				</a>
 			</div>
 		</article>
 
 		<br />
-		<div ng-show="package.License">
+		<div data-ng-show="package.License">
 			<h2>License</h2>
 			<pre>{{package.License}}</pre>
 		</div>
