--- a/src/ExtensionGallery/app/views/home.html
+++ b/src/ExtensionGallery/app/views/home.html
@@ -1,7 +1,7 @@
 ﻿
 <h1 class="page-header">
 	{{headline}}
-	<a ng-href="{{feed}}" class="btn btn-default">
+	<a data-ng-href="{{feed}}" class="btn btn-default">
 		<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 	</a>
 </h1>
@@ -11,28 +11,28 @@
 		<label class="sr-only" for="search">Search</label>
 		<div class="input-group">
 			<div class="input-group-addon"><span class="glyphicon glyphicon-search"></span></div>
-			<input type="text" id="search" ng-model="query" placeholder="Search" class="form-control" />
+			<input type="text" id="search" data-ng-model="query" placeholder="Search" class="form-control" />
 		</div>
 	</div>
 
-	<article ng-repeat="package in packages | filter: packageSearch">
-		<img class="icon" ng-src="{{package.Icon}}" alt="{{package.Name}}" />
+	<article data-ng-repeat="package in packages | filter: packageSearch">
+		<img class="icon" data-ng-src="{{package.Icon}}" alt="{{package.Name}}" />
 		<div>
 			<h3>
-				<a ng-href="#/extension/{{package.ID}}">{{package.Name}}</a>
+				<a data-ng-href="#/extension/{{package.ID}}">{{package.Name}}</a>
 			</h3>
 
-			<a ng-href="#/author/{{package.Author | lowercase }}">{{package.Author}}</a>
+			<a data-ng-href="#/author/{{package.Author | lowercase | escape }}">{{package.Author}}</a>
 			<p>{{package.Description}}</p>
 
-			<a class="btn-sm btn-success" ng-href="{{package.DownloadUrl}}">
+			<a class="btn-sm btn-success" data-ng-href="{{package.DownloadUrl}}">
 				<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Download
 			</a>
 
-			<a ng-href="/feed/extension/{{package.ID}}" class="btn-sm btn-default">
+			<a data-ng-href="/feed/extension/{{package.ID}}" class="btn-sm btn-default">
 				<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 			</a>
-			<time>{{package.DatePublished | date:'&nbsp;MMM d. yyyy'}}</time>
+			<time datetime="{{package.DatePublished | date:'yyyy-MM-dd'}}">{{package.DatePublished | date:'&nbsp;MMM d. yyyy'}}</time>
 		</div>
 	</article>
 </div>
