--- a/src/ExtensionGallery/app/views/home.html
+++ b/src/ExtensionGallery/app/views/home.html
@@ -1,6 +1,6 @@
 ﻿
 <h1 class="page-header">
-	{{headline}}
+	{{pageTitle}}
 	<a data-ng-href="{{feed}}" class="btn btn-default">
 		<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 	</a>
