--- a/src/ExtensionGallery/app/less/site.less
+++ b/src/ExtensionGallery/app/less/site.less
@@ -13,6 +13,11 @@ a.btn:hover, a.btn-sm:hover {
 	text-decoration: none;
 }
 
+.navbar-brand {
+	background: url(/img/logo.png) no-repeat center left;
+	padding-left: 30px;
+}
+
 .container {
 	max-width: 960px;
 
