Updates after demo

--- a/src/ExtensionGallery/app/views/upload.html
+++ b/src/ExtensionGallery/app/views/upload.html
@@ -7,7 +7,7 @@
 <form id="upload" ng-hide="form.$submitted" ng-submit="upload()">
 	<div class="form-group">
 		<label for="repo">Source code</label>
-		<input type="url" ng-model="repo" id="repo" placeholder="Url to the source code repository" />
+		<input type="url" ng-model="repo" id="repo" class="form-control" placeholder="Url to the source code repository" />
 	</div>
 
 	<div class="form-group">
