--- a/src/ExtensionGallery/app/views/extension.html
+++ b/src/ExtensionGallery/app/views/extension.html
@@ -2,7 +2,8 @@
 	<div data-ng-model="package" data-ng-show="package">
 		<h1 class="page-header">{{package.Name}}</h1>
 
-		<article>
+		<article class="extension">
+
 			<img class="preview" data-ng-src="{{package.Preview}}" alt="{{package.Name}}" />
 
 			<div class="properties">
@@ -13,31 +14,31 @@
 					<p data-ng-show="package.Tags"><strong>Tags:</strong> {{package.Tags}}</p>
 					<p><strong>Version:</strong> {{package.Version}}</p>
 					<p><strong>Updated:</strong> <time datetime="{{package.DatePublished | date:'yyyy-MM-dd'}}">{{package.DatePublished | date:'MMM d. yyyy'}}</time></p>
-
-					<ul>
-						<li data-ng-show="package.MoreInfoUrl">
-							<a href="{{package.MoreInfoUrl}}">
-								<span class="glyphicon glyphicon-home" aria-hidden="true"></span> Website
-							</a>
-						</li>
-						<li data-ng-show="package.Repo">
-							<a href="{{package.Repo}}">
-								<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Source code
-							</a>
-						</li>
-						<li data-ng-show="package.IssueTracker">
-							<a href="{{package.IssueTracker}}">
-								<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Issue Tracker
-							</a>
-						</li>
-					</ul>
 				</div>
 
+				<ul>
+					<li data-ng-show="package.MoreInfoUrl">
+						<a href="{{package.MoreInfoUrl}}">
+							<span class="glyphicon glyphicon-home" aria-hidden="true"></span> Website
+						</a>
+					</li>
+					<li data-ng-show="package.Repo">
+						<a href="{{package.Repo}}">
+							<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Source code
+						</a>
+					</li>
+					<li data-ng-show="package.IssueTracker">
+						<a href="{{package.IssueTracker}}">
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Issue Tracker
+						</a>
+					</li>
+				</ul>
+
 				<br />
-				<a class="btn-sm btn-success" data-ng-href="{{package.DownloadUrl}}">
+				<a class="btn btn-success" href="{{package.DownloadUrl}}" target="_self">
 					<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Download
 				</a>
-				<a class="btn-sm btn-default" data-ng-href="/feed/extension/{{package.ID}}">
+				<a class="btn btn-default" href="/feed/extension/{{package.ID}}" target="_self">
 					<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 				</a>
 			</div>
