--- a/src/ExtensionGallery/app/views/upload.html
+++ b/src/ExtensionGallery/app/views/upload.html
@@ -4,15 +4,15 @@
     iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.
 </p>
 
-<form id="upload" ng-hide="form.$submitted" ng-submit="upload()">
+<form id="upload" data-ng-hide="form.$submitted" data-ng-submit="upload()">
 	<div class="form-group">
 		<label for="repo">Source code</label>
-		<input type="url" ng-model="repo" id="repo" class="form-control" placeholder="Url to the source code repository" />
+		<input type="url" data-ng-model="repo" id="repo" class="form-control" placeholder="Url to the source code repository" />
 	</div>
 
 	<div class="form-group">
 		<label for="issuetracker">Issue tracker</label>
-		<input type="url" id="issuetracker" ng-model="issuetracker" class="form-control" placeholder="Url to the issue tracker" />
+		<input type="url" id="issuetracker" data-ng-model="issuetracker" class="form-control" placeholder="Url to the issue tracker" />
 	</div>
 
 	<div class="form-group">
@@ -21,7 +21,7 @@
 		<p class="help-block">Only .vsix files are supported</p>
 	</div>
 
-    <input type="submit" value="Upload" class="btn-sm btn-primary" />
+	<input type="submit" value="Upload" class="btn-sm btn-primary" />
 
-    <p class="has-error" ng-show="upload.url.$invalid || error">{{error}}</p>
+	<p class="has-error" data-ng-show="upload.url.$invalid || error">{{error}}</p>
 </form>
