--- a/src/ExtensionGallery/app/views/upload.html
+++ b/src/ExtensionGallery/app/views/upload.html
@@ -1,7 +1,7 @@
 ﻿<h1 class="page-header">Upload new extension</h1>
 <p>
-    Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod,
-    iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.
+    Upload a new extension to the gallery. It can either be a brand new extension or and updated version
+	of an extension that's already on the gallery.
 </p>
 
 <form id="upload" data-ng-hide="form.$submitted" data-ng-submit="upload()">
