--- a/src/ExtensionGallery/app/less/site.less
+++ b/src/ExtensionGallery/app/less/site.less
@@ -52,6 +52,10 @@ h3 {
 #extensions {
 	position: relative;
 
+	h3 span{
+		font-size: .6em;
+	}
+
 	#searchform {
 		width: 250px;
 		float: right;
@@ -68,7 +72,6 @@ h3 {
 
 		.icon {
 			float: left;
-			width: 90px;
 		}
 
 		.preview {
