Implemented Live Tile support. Fixed #3

--- a/src/ExtensionGallery/app/less/site.less
+++ b/src/ExtensionGallery/app/less/site.less
@@ -145,3 +145,15 @@ footer {
 	text-align: center;
 	border-top: 1px solid lightgray;
 }
+
+@media all and (max-width: 768px) {
+	html, body{
+		min-width: 620px;
+	}
+	#extensions article p{
+		-ms-text-size-adjust: 125%;
+	}
+    @-ms-viewport{
+		width: 620px;
+    }
+}
