Added CDN and OpenGraph support

--- a/src/ExtensionGallery/app/less/site.less
+++ b/src/ExtensionGallery/app/less/site.less
@@ -70,6 +70,11 @@ h3 {
 			margin-left: 120px;
 		}
 
+		.author{
+			margin: 3px 0;
+			display: inline-block;
+		}
+
 		.icon {
 			float: left;
 		}
@@ -146,7 +151,7 @@ footer {
 	border-top: 1px solid lightgray;
 }
 
-@media all and (max-width: 768px) {
+@media all and (min-width: 400px) {
 	html, body{
 		min-width: 620px;
 	}
