--- a/src/ExtensionGallery/app/less/site.less
+++ b/src/ExtensionGallery/app/less/site.less
@@ -151,7 +151,7 @@ footer {
 	border-top: 1px solid lightgray;
 }
 
-@media all and (min-width: 400px) {
+@media all and (min-width: 400px) and (max-width: 800px) {
 	html, body{
 		min-width: 620px;
 	}
