--- a/src/ExtensionGallery/app/views/home.html
+++ b/src/ExtensionGallery/app/views/home.html
@@ -1,7 +1,7 @@
 ﻿
 <h1 class="page-header">
 	{{pageTitle}}
-	<a data-ng-href="{{feed}}" class="btn btn-default">
+	<a href="{{feed}}" class="btn btn-default" target="_self">
 		<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 	</a>
 </h1>
