--- a/src/ExtensionGallery/app/views/feedguide.html
+++ b/src/ExtensionGallery/app/views/feedguide.html
@@ -6,7 +6,7 @@
 </p>
 
 <section>
-	<h2>Choose the rigth feed</h2>
+	<h2>Choose the right feed</h2>
 	<p>There are several feeds in this gallery you can subscribe to.</p>
 
 	<dl>
