--- a/src/ExtensionGallery/app/views/extension.html
+++ b/src/ExtensionGallery/app/views/extension.html
@@ -13,7 +13,7 @@
 					<!--<p><strong>Supports:</strong> <span data-ng-repeat="version in package.SupportedVersions">{{version + '&nbsp;'}}</span></p>-->
 					<p data-ng-show="package.Tags"><strong>Tags:</strong> {{package.Tags}}</p>
 					<p><strong>Version:</strong> {{package.Version}}</p>
-					<p><strong>Updated:</strong> <time datetime="{{package.DatePublished | date:'yyyy-MM-dd'}}">{{package.DatePublished | date:'MMM d. yyyy'}}</time></p>
+					<p><strong>Updated:</strong> <time datetime="{{package.DatePublished | date:'yyyy-MM-dd'}}">{{package.DatePublished | date:'MMM d. yyyy HH:mm'}}</time></p>
 				</div>
 
 				<ul>
