Display README.md file. Fixed #2

--- a/src/ExtensionGallery/app/less/site.less
+++ b/src/ExtensionGallery/app/less/site.less
@@ -129,6 +129,13 @@ img {
             }
         }
     }
+
+    .readme{
+        line-height: 1.5;
+        p{
+            margin: 1.2em 0;
+        }
+    }
 }
 
 #upload {
